[project]
name = "pymongo_crud_use"
version = "0.0.1"
authors = [
  { name="hecdelatorre", email="hector982015@hotmail.com" }
]
description = "A package for MongoDB CRUD operations using PyMongo"
readme = "README.md"
license = "GPL-3.0-only"
python = ">=3.8"

[project.dependencies]
pymongo = "*"
pymongo-srv = "*"
uuid-extensions = "*"

[project.urls]
Homepage = "https://github.com/hecdelatorre/pymongo_crud_use"
Issues = "https://github.com/hecdelatorre/pymongo_crud_use/issues"

[project.classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: GNU General Public License v3 (GPLv3)
Operating System :: OS Independent
